--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 .emacs.desktop
 .emacs.desktop.lock
 .DS_Store
+old.emacs.d/
+old.emacs.d
 *~
 
 # Shouldn't Be Made-------------------------------------------------------------
