--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,35 @@
 
-# Too big to push to git--------------------------------------------------------
+# ------------------------------------------------------------------------------
+# Too big to push to git
+# ------------------------------------------------------------------------------
+
 .cask/
 .cask
 
-# Machine Specific--------------------------------------------------------------
+
+# ------------------------------------------------------------------------------
+# Machine Specific
+# ------------------------------------------------------------------------------
+
 .emacs.desktop
 .emacs.desktop.lock
 .DS_Store
-old.emacs.d/
-old.emacs.d
-old.public.emacs.d/
-old.public.emacs.d
+previous.emacs.d/
 *~
 
-# Shouldn't Be Made-------------------------------------------------------------
+
+# ------------------------------------------------------------------------------
+# Shouldn't Be Made
+# ------------------------------------------------------------------------------
+
 custom.el
 
-# ???---------------------------------------------------------------------------
+
+# ------------------------------------------------------------------------------
+# ????????
+# ------------------------------------------------------------------------------
+
+*ido session*
 ido.last/
 ido.last
 auto-save-list/
