Machine-Specific Inventory File, Format GitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,16 @@
 # Machine Specific
 # ------------------------------------------------------------------------------
 
+*~
 .emacs.desktop
 .emacs.desktop.lock
 .DS_Store
 previous.emacs.d/
-*~
+
 
 
 # ------------------------------------------------------------------------------
-# Shouldn't Be Made
+# If Generated, Ignore.
 # ------------------------------------------------------------------------------
 
 custom.el
