Add *ido session* to gitignore
Not sure what it's purpose was. Perhaps I accidently saved it.

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,14 @@
 # Machine Specific
 # ------------------------------------------------------------------------------
 
+.DS_Store
+.local
 .emacs.desktop
 .emacs.desktop.lock
 .DS_Store
 previous.emacs.d/
+ *ido session*
+*ido session* 
 *~
 
 
