Ignore tramp file and eshell directory

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,13 @@ previous.emacs.d/
 # ------------------------------------------------------------------------------
 
 custom.el
+eshell/
 
+# ------------------------------------------------------------------------------
+# Connections
+# ------------------------------------------------------------------------------
+
+tramp
 
 # ------------------------------------------------------------------------------
 # ????????
