--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 .emacs.desktop.lock
 .DS_Store
 previous.emacs.d/
-
+machine-specific/
 
 
 # ------------------------------------------------------------------------------
