Ignore these files until I can direct them to machine-specific

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# ------------------------------------------------------------------------------
+# Ignore these until I knkow where to put them
+# ------------------------------------------------------------------------------
+
+ac-comphist.dat
+bookmarks
+org-clock-save.el
+abbrev_defs
 
 # ------------------------------------------------------------------------------
 # Too big to push to git
